Formatter / fix wrong alignment in md view
 #157

--- a/web-ui/src/main/resources/catalog/views/sextant/less/formatter.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/formatter.less
@@ -8,6 +8,9 @@
   td, p, dt, dl, div {
     font-size: 13px !important;
   }
+  dl {
+    clear: both;
+  }
   dt {
     float: left;
     &:after {
